--- a/src/config/config_template/config.yaml
+++ b/src/config/config_template/config.yaml
@@ -1,2 +1,11 @@
-name: "Сталин"
+user:
+  login: 0000000 
+  password: пароль
+  name: Фамилия
 home-url: "https://contest.solutions/..."
+
+# Возможные варианты:
+locale: russian
+# locale: english
+# locale: kazakh
+# locale: ukrainian
