--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ "*" ]
+    branches: "*"
   pull_request:
-    branches: [ "master" ]
+    branches: "master"
 
 jobs:
   build:
@@ -14,12 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - uses: cachix/install-nix-action@v18
+    
+    - name: Install Nix
+      uses: cachix/install-nix-action@v27
       with:
         nix_path: nixpkgs=channel:nixos-unstable
     
-    - run: nix-shell
-    
     - name: Run tests
-      run: python -m unittest discover tests
+      run: nix-shell --command "cd csti && python -m unittest discover tests"
