Squashed commit of the following:
commit f6d0fa335886fd2ddfdb03c4e248edfb601a1c98
Author: firefenix <kitotavrik.media@gmail.com>
Date:   Tue Aug 20 23:48:06 2024 +0300

    Проект упакован под флейки.

commit 6f79c2df0ba9b28a84a89f53c040a786f3ca23e4
Author: firefenix <kitotavrik.media@gmail.com>
Date:   Tue Aug 20 20:15:23 2024 +0300

    Исправленны тесты.

commit c5ce25769ca0649b44a886abd98bd54fcd879280
Author: firefenix <kitotavrik.media@gmail.com>
Date:   Tue Aug 20 20:12:14 2024 +0300

    Перевод проекта на флейки. Рефакторинг.
    Добавленна поддержка __init__.py для contest, внедрение poerty и
    перевод проекта на флейки.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ click = "^8.1.7"
 beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
 
+[tool.poetry.scripts]
+csti = "csti.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
