--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ inquirerpy = "^0.3.4"
 click = "^8.1.7"
 beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
+termcolor = "^2.4.0"
 
 [tool.poetry.scripts]
 csti = "csti.__main__:main"
