--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
-[*.py]
-indent_style = tab 
+[*]
+indent_style = space 
 indent_size = 4
 insert_final_newline = true
 max_line_length = 80
+
+[*.nix]
+indent_size = 2
