--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,19 @@
-[*.py]
-indent_style = tab 
+[*]
+indent_style = space
 indent_size = 4
 insert_final_newline = true
-max_line_length = 80
+
+[*.py]
+max_line_length = 88
+
+[*.nix]
+indent_size = 2
 
 [{makefile, **.mk}]
 indent_style = tab
+
+[*.html]
+indent_size = 2
+
+[*.yaml]
+indent_size = 2
