--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,6 @@ jobs:
       uses: cachix/install-nix-action@v27
       with:
         nix_path: nixpkgs=channel:nixos-unstable
-    
+    - uses: DeterminateSystems/magic-nix-cache-action@v2
     - name: Run tests
-      run: nix develop --command bash -c "nix-shell nix/all.nix --command 'python -m unittest discover tests'"
+      run: nix develop .#tests --command bash -c "python -m unittest discover tests"
