--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,12 @@
+root = true
+
 [*]
 indent_style = space
 indent_size = 4
 insert_final_newline = true
 
 [*.py]
-max_line_length = 88
+max_line_length = 80
 
 [*.nix]
 indent_size = 2
