--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ pyyaml = "^6.0.2"
 platformdirs = "^4.2.2"
 inquirerpy = "^0.3.4"
 click = "^8.1.7"
+termcolor = "^2.4.0"
+# Ejudje.
 beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
-termcolor = "^2.4.0"
 
 [tool.poetry.scripts]
 csti = "csti.__main__:main"
